--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.4.4",
     "lib-flexible": "^0.3.2",
     "mint-ui": "^2.2.13",
+    "mockjs": "^1.1.0",
     "postcss-px2rem": "^0.3.0",
     "swiper": "^5.2.1",
     "vee-validate": "2",
